<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white">

    <!-- Toolbar at the Top -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/design_default_color_background"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"></androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <!-- Email Field -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <!-- First Name -->
    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="First Name"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <!-- Last Name -->
    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="Last Name"
        android:inputType="textPersonName"
        android:padding="10dp" />


    <!-- Password Field -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <!-- Username Field -->
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:padding="10dp" />

    <!-- Role Dropdown (Spinner) -->
    <Spinner
        android:id="@+id/spinnerRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/roles_array"
        android:layout_marginTop="8dp"/>

    <!-- Register Button -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"/>

</LinearLayout>
